switched towards templat usage